# A-Shader-of-Ice-and-Fire

./: .gitignore  CMakeLists.txt  Makefile  README.md
magicavoxel/: volcanwithlava.vox
models/: volcan.mtl  volcanwithlava.mtl
models/cave_lava/: cave_lava.mtl
models/gate/: GateSoutenance.mtl  gate.mtl  light2.mtl
models/lamp1/: lamp1.mtl
models/lamps/lamp1/: lamp.mtl  light.mtl
models/lamps/lamp3/: lamp.mtl  light.mtl
models/lamps/lamp4/: lamp.mtl
models/lamps/model_lamp_1/: lamp.mtl  light.mtl
models/lava/: lava.mtl  lava_particle.mtl
models/volcan_soutenance/: FinalVolcan_2.mtl  VolcanSoutenance.mtl
models/volcan_with_cave/: volcan_with_cave.mtl
models/volcan_with_lava/: volcan_with_lava.mtl
models/volcan_with_sand/: volcan_with_sand.mtl
models/water/: water.mtl  water2.mtl  waterLOD0.mtl  waterLOD2.mtl
new_models/lamp1/: lamp1.mtl
new_models/light1/: light1.mtl
new_models/volcan_with_sand/: volcan_with_sand.mtl
shaders/bloom/: fragment.glsl  vertex.glsl
shaders/blur/: fragment.glsl  vertex.glsl
shaders/cubemap/: fragment.glsl  vertex.glsl
shaders/fragment/: main.glsl
shaders/geometry/: main.glsl
shaders/lava/: fragment.glsl  geometry.glsl  tcontrol.glsl  teval.glsl  vertex.glsl
shaders/light/: fragment.glsl  vertex.glsl
shaders/light2/: fragment.glsl  vertex.glsl
shaders/particle/: compute.glsl  fragment.glsl  geometry.glsl  vertex.glsl
shaders/screen/: fragment.glsl  vertex.glsl
shaders/screen/fragment/: main.glsl
shaders/screen/vertex/: main.glsl
shaders/utils/: ice.glsl  lava_texture.glsl  light.glsl  misc.glsl
shaders/vertex/: main.glsl
shaders/volcano/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/water/: fragment.glsl  geometry.glsl  tcontrol.glsl  teval.glsl  vertex.glsl
src/: camera.cc  camera.hh  cubemap.cc  cubemap.hh  fbo.cc  fbo.hh  init.cc  init.hh  light.cc  light.hh  main.cc  mesh.cc  mesh.hh  model.cc  model.hh  particle.cc  particle.hh  paths.hh  program.cc  program.hh  screen.cc  screen.h  sound.cc  sound.hh  utils.hh
